apps/dendrite/modules/sync/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`matrix.arctiq.codegameeat.com`) && Path(`/_matrix/client/{path:.*?/(sync|user/.*?/filter/?.*|keys/changes|rooms/.*?/(messages|.*?_?members|context/.*?|relations/.*?|event/.*?))}`)
      services:
        - name: service
          port: external
  tls:
    certResolver: le
